// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileItem Component ProfileItem component has a label for the Address 1`] = `
<label
  htmlFor="item Address"
>
  Item Address
</label>
`;

exports[`ProfileItem Component ProfileItem component has a label for the name 1`] = `
<label
  htmlFor="item name"
>
  Item Name
</label>
`;

exports[`ProfileItem Component ProfileItem component has a label for the price 1`] = `
<label
  htmlFor="item price"
>
  Item Price
</label>
`;
